--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,6 +3,7 @@
 
 <div class="section">
   <div class="container">
+    <%= link_to "New Post", new_post_path, class:"button" %>
     <% @posts.each do |post| %>
       <div class="card">
         <div class="card-content">
