--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
       <!-- Right side -->
       <div class="level-right">
         <p class="level-item">
-          <%= button_to "Edit", edit_post_path(@post), class:"button" %>
+          <%= link_to "Edit", edit_post_path(@post), class:"button" %>
         </p>
         <p class="level-item">
           <%= button_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure?" }, class:"button is-danger" %>
@@ -22,6 +22,9 @@
     </nav>
     <hr/>
 
+    <div class="title">
+      <p> <strong><%= @post.title %></strong></p>
+    </div>
     <div class="content">
       <%= @post.content %>
     </div>
